RESOLVED FIXED43803
Only the last Korean character can be shown if font style is enabled while typing
https://bugs.webkit.org/show_bug.cgi?id=43803
Summary Only the last Korean character can be shown if font style is enabled while ty...
Alexey Proskuryakov
Reported 2010-08-10 11:54:05 PDT
Steps to reproduce: In a contenteditable div, 1. Input any character to the message body, then enable 2-Set Hangul input method. 2. In Mail, go to menu Format > Style > Bold / Italic / Underline (also you can press 'Command + B', 'Command + I' or 'Command + U'). 3. Type any Korean characters (e.g. "한글(gksrmf)" ) after the characters (typed in Step 1), check the results. <rdar://problem/6988023>
Attachments
proposed fix (4.75 KB, patch)
2010-08-10 11:57 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2010-08-10 11:57:35 PDT
Created attachment 64036 [details] proposed fix
Alexey Proskuryakov
Comment 2 2010-08-10 23:21:59 PDT
Note You need to log in before you can comment on or make changes to this bug.