        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=43803
        <rdar://problem/6988023> Only the last Korean character can be shown if font style is enabled while typing (43803)

        Test: platform/mac/editing/input/bold-node.html

        * editing/Editor.cpp: (WebCore::Editor::setComposition): It is not clear to me what the
        "baseNode == extentNode" check is about in this function , but let's try to make it more
        likely that it passes.



Canonical link: https://commits.webkit.org/55929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65127 268f45cc-cd09-0410-ab3c-d52691b4dbfc